--- a/app.wxss
+++ b/app.wxss
@@ -6,4 +6,22 @@
   align-items: center;
   justify-content: space-between;
   box-sizing: border-box;
-} 
+}
+
+@font-face {
+  font-family: 'iconfont';  /* project id 218229 */
+  src: url('//at.alicdn.com/t/font_1oyoojup1w34bo6r.eot');
+  src: url('//at.alicdn.com/t/font_1oyoojup1w34bo6r.eot?#iefix') format('embedded-opentype'),
+  url('//at.alicdn.com/t/font_1oyoojup1w34bo6r.woff') format('woff'),
+  url('//at.alicdn.com/t/font_1oyoojup1w34bo6r.ttf') format('truetype'),
+  url('//at.alicdn.com/t/font_1oyoojup1w34bo6r.svg#iconfont') format('svg');
+}
+iconfont {
+  font-family:"iconfont" !important;
+  font-size:16px;
+  font-style:normal;
+  -webkit-font-smoothing: antialiased;
+  -moz-osx-font-smoothing: grayscale;
+}
+.icon-stars:before { content: "\e605"; }
+.icon-sousuo:before { content: "\e604"; }
