--- a/component/music-detail.wxml
+++ b/component/music-detail.wxml
@@ -8,7 +8,7 @@
     <image class='m-image' wx:if="{{imgUrl}}" src="{{imgUrl}}"></image>
     <view class="play-all" bindtap='clickPlayAll'>
       
-        <text class="span">
+        <text  class="span">
 随机播放全部
         </text>
         
@@ -20,7 +20,7 @@
     <view class='s-ul'>
       <view class='s-li' wx:for="{{data}}" wx:key="{{index}}">
         <text class='h2'>{{item.songname}}</text>
-        <text class='p' bindtap='navigateToDetail'>{{item.singer[0].name}} {{item.albumname}}</text>
+        <text class='p' bindtap='navigateToDetail' data-index = "{{index}}">{{item.singer[0].name}} {{item.albumname}}</text>
       </view>
     </view>
   </view>
