--- a/pages/player/player.wxss
+++ b/pages/player/player.wxss
@@ -1,103 +1,303 @@
 /* pages/player/player.wxss */
+.container{
+  position: relative;
+}
 .player {
-        position: fixed;
-        z-index: 1000;
-        top: 0;
-        left: 0;
-        bottom: 0;
-        right: 0;
-        background: #222;
-        background-repeat:no-repeat ;
-        background-size: cover;
-        
-        }
-        .hidden {
-            position: absolute;
-            top: 0;
-            left: px2rem(6px);
-            z-index: 60;
-           
+    position: fixed;
+    z-index: 1000;
+    top: 0;
+    left: 0;
+    bottom: 0;
+    right: 0;
+    background: #222;
+    background-repeat: no-repeat;
+    background-size: cover;
 
-        }
-         i {
-                font-size: 22px;
-                display: block;
-                padding: px2rem(10px);
-                color: #ffcd32;
-            }
-        .background{
-            position: absolute;
-            left: 0;
-            top: 0;
-            width: 100%;
-            height: 100%;
-            z-index: -1;
-            opacity: .6;
-            -webkit-filter: blur(20px);
-        }
-        h3 {
-            position: absolute;
-            top: px2rem(2px);
-            left: 10%;
-            z-index: 40;
-            width: 80%;
-            text-overflow: ellipsis;
-            overflow: hidden;
-            white-space: nowrap;
-            text-align: center;
-            line-height: px2rem(40px);
-            font-size: 14px;
-            color: #fff;
-            height: 40px;
-            padding-top: 10px;
-        }
-        h2 {
-            line-height: px2rem(20px);
-            text-align: center;
-            color: #fff;
-            font-size: 18px;
-            padding-bottom: 10px;
-        }
-        .music-img {
+}
 
-            position: absolute;
-            left: 50%;
-            transform: translateX(-50%);
-            top: px2rem(150px);
-            width: 80%;
-            
-        }
-        img {
-                border-radius: 50%;
-            }
-            h2 {
-                margin-top: px2rem(100px);
-            }
-        .player-control {
-            width: 100%;
-            position: absolute;
-            left: 0;
-            bottom: px2rem(50px);
-           
-            }
-             .progress {
-                margin: 10px auto;
-                width: 90%;
+.hidden {
+    position: absolute;
+    top: 0;
+    left: 6rpx;
+    z-index: 60;
 
-            }
-            .player-button {
-                text-align: center;
-                display: inline-block;
-                width: 100%;
-                height: px2rem(50px);
-                vertical-align: middle;
-            }
-             i {
-                    margin-left: px2rem(20px);
-                    font-size: 40px;
-                    color: #ffcd32bd;
-                }
-                i:nth-of-type(3) {
-                    font-size: 50px;
-                    line-height: px2rem(50px);
-                }
+}
+
+i {
+    font-size: 22rpx;
+    display: block;
+    padding: 10rpx;
+    color: #ffcd32;
+}
+
+.background {
+    position: absolute;
+    left: 0;
+    top: 0;
+    width: 100%;
+    height: 100%;
+    z-index: -1;
+    opacity: 0.6;
+    -webkit-filter: blur(20px);
+}
+.bg-image{
+  width: 100%;
+  height: 100%;
+}
+.song-name {
+    position: absolute;
+    top: 2 rpx;
+    transform: translateY(22rpx);
+    left: 10%;
+    z-index: 40;
+    width: 80%;
+    text-overflow: ellipsis;
+    overflow: hidden;
+    white-space: nowrap;
+    text-align: center;
+    line-height: 40 rpx;
+    font-size: 14 rpx;
+    color: #fff;
+    height: 40 rpx;
+    padding-top: 10 rpx;
+}
+
+.song-title {
+  position: absolute;
+  transform: translateY(72rpx);
+  font-size: 25rpx;
+    top: 42 rpx;
+    left: 10%;
+    width: 80%;
+    line-height: 20 rpx;
+    text-align: center;
+    color: #fff;
+    padding-bottom: 10 rpx;
+}
+
+.music-img {
+    display: block;
+    position: absolute;
+    left: 50%;
+    transform: translate(-50%,200rpx);
+    top: 250 rpx;
+    width: 80%;
+
+}
+
+.music-image {
+    height: 600rpx;
+    width: 600rpx;
+    border-radius: 50%;
+}
+
+h2 {
+    margin-top: 100 rpx;
+}
+
+.player-control {
+    width: 100%;
+    position: absolute;
+    left: 0;
+    bottom: 50rpx;
+
+}
+
+.progress {
+    margin: 10 rpx auto;
+    width: 90%;
+
+}
+
+.player-button {
+    text-align: center;
+    display: inline-block;
+    width: 100%;
+    height: 50 rpx;
+    vertical-align: middle;
+}
+@font-face {
+    font-family: 'iconfont';  /* project id 597285 */
+    src: url('//at.alicdn.com/t/font_597285_efjej0gaui.eot');
+    src: url('//at.alicdn.com/t/font_597285_efjej0gaui.eot?#iefix') format('embedded-opentype'),
+    url('//at.alicdn.com/t/font_597285_efjej0gaui.woff') format('woff'),
+    url('//at.alicdn.com/t/font_597285_efjej0gaui.ttf') format('truetype'),
+    url('//at.alicdn.com/t/font_597285_efjej0gaui.svg#iconfont') format('svg');
+}
+
+.iconfont {
+    font-family:"iconfont" !important;
+    font-size:90rpx;
+    color: yellow;
+    font-style:normal;
+    margin-right: 30rpx;
+    -webkit-font-smoothing: antialiased;
+    -moz-osx-font-smoothing: grayscale;
+}
+
+.icon-fanhui:before { content: "\e600"; }
+
+.icon-zanting:before { content: "\e602"; }
+
+.icon-shangyishou:before { content: "\e603"; }
+
+.icon-zanting1:before { content: "\e6a9"; }
+
+.icon-suijibofang:before { content: "\e672"; }
+
+.icon-shanchu:before { content: "\e612"; }
+
+.icon-caidan:before { content: "\e64f"; }
+
+.icon-xiangxia5:before { content: "\e774"; }
+
+.icon-shangyishoushangyige:before { content: "\e78a"; }
+
+.icon-xiayigexiayishou:before { content: "\e7a5"; }
+
+.icon-shanchu1:before { content: "\e67e"; }
+
+.icon-ai07:before { content: "\e67b"; }
+
+.icon-caidanfenlei:before { content: "\e628"; }
+
+.icon-bofang:before { content: "\e604"; }
+
+.icon-xiayishou:before { content: "\e606"; }
+
+.icon-shangyishou1:before { content: "\e607"; }
+
+.icon-xiayishou1:before { content: "\e616"; }
+
+.icon-yonghu:before { content: "\e619"; }
+
+.icon-xiayishou2:before { content: "\e62c"; }
+
+.icon-yonghu1:before { content: "\e643"; }
+
+.icon-yonghu2:before { content: "\e601"; }
+
+.icon-xihuan:before { content: "\e60e"; }
+
+.icon-bofang1:before { content: "\e63d"; }
+
+.icon-delete:before { content: "\e613"; }
+
+.icon-xihuan1:before { content: "\e635"; }
+
+.icon-shanchu2:before { content: "\e60b"; }
+
+.icon-caidan1:before { content: "\e659"; }
+
+.icon-yinle:before { content: "\e67a"; }
+
+.icon-xihuan4:before { content: "\e621"; }
+
+.icon-yonghu3:before { content: "\e69c"; }
+
+.icon-bofangzanting:before { content: "\e61d"; }
+
+.icon-shanchu3:before { content: "\e674"; }
+
+.icon-xihuan6:before { content: "\e86f"; }
+
+.icon-xihuan5:before { content: "\e611"; }
+
+.icon-zanting2:before { content: "\e609"; }
+
+.icon-xihuan2:before { content: "\e60a"; }
+
+.icon-mmp:before { content: "\e60f"; }
+
+.icon-erjicaidan:before { content: "\e610"; }
+
+.icon-zanting3:before { content: "\e6ad"; }
+
+.icon-yonghu4:before { content: "\e66b"; }
+
+.icon-icon-:before { content: "\e648"; }
+
+.icon-caidanpeizhi:before { content: "\e617"; }
+
+.icon-yiliao:before { content: "\e61a"; }
+
+.icon-yinle1:before { content: "\e629"; }
+
+.icon-shangyishou-yuanshijituantubiao:before { content: "\e62d"; }
+
+.icon-xiayishou-yuanshijituantubiao:before { content: "\e62e"; }
+
+.icon-xihuan3:before { content: "\e69a"; }
+
+.icon-xiayishou3:before { content: "\e624"; }
+
+.icon-yinle2:before { content: "\e60c"; }
+
+.icon-xiangxia02:before { content: "\e6c4"; }
+.margin0{
+  margin: 0;
+}
+/* 控制条 */
+
+.song-control {
+    padding: 30rpx 0;
+    height: 140rpx;
+    box-sizing: border-box;
+}
+
+.song-control .progress {
+    height: 80rpx;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+}
+
+.progress .time-start,
+.progress .time-total {
+    flex: 0 0 110rpx;
+    color: #808080;
+    width: 110rpx;
+    text-align: center;
+    font-size: 24rpx;
+}
+
+.progress .time-bar {
+    position: relative;
+    flex: auto;
+    height: 4rpx;
+    overflow: hidden;
+    background: rgba(255, 255, 255, 0.2);
+}
+
+.progress .time-bar .time-play {
+    position: absolute;
+    left: -100%;
+    top: 0;
+    width: 100%;
+    height: 100%;
+    background: #31c27c;
+    transition: all 1s linear;
+}
+@keyframes animate {
+    0% {
+        transform: rotate(0);
+    }
+    25% {
+        transform: rotate(90deg);
+    }
+    50% {
+        transform: rotate(180deg);
+    }
+    75% {
+        transform: rotate(270deg);
+    }
+    100% {
+        transform: rotate(360deg);
+    }
+}
+    .play{
+      animation: animate infinite linear 20s
+    }
+    .pause{
+      animation: none;
+    }
