--- a/pages/recommend-detail/recommend-detail.wxml
+++ b/pages/recommend-detail/recommend-detail.wxml
@@ -1,2 +1,2 @@
 <!--pages/recommend-detail/recommend-detail.wxml-->
-<music-detail title="{{cdList[0].dissname}}" imgUrl="{{cdList[0].logo}}" data="{{cdList[0].songlist}}"></music-detail>
+<music-detail title="{{cdList[0].dissname}}" imgUrl="{{cdList[0].logo}}" data="{{songList}}"></music-detail>
