--- a/pages/seniority-detail/seniority-detail.wxml
+++ b/pages/seniority-detail/seniority-detail.wxml
@@ -1,3 +1,4 @@
 <!--pages/seniority-detail/seniority-detail.wxml-->
 <!-- <text>pages/seniority-detail/seniority-detail.wxml</text> -->
 <music-detail title="{{title}}" imgUrl="{{imgUrl}}" data="{{data}}"></music-detail>
+<music-control></music-control> 
