--- a/pages/singer-detail/singer-detail.wxml
+++ b/pages/singer-detail/singer-detail.wxml
@@ -1,3 +1,4 @@
 <!--pages/singer-detail/singer-detail.wxml-->
 <!-- <text>pages/singer-detail/singer-detail.wxml</text> -->
 <music-detail title="{{title}}" imgUrl="{{imgUrl}}" data="{{songData}}"></music-detail>
+<music-control></music-control> 
